--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://c28d14f0-3cc3-4880-82e3-fc42aa00a03f.preview.emergentagent.com
 WDS_SOCKET_PORT=443
